--- a/.github/workflows/snyk-infrastructure-analysis.yml
+++ b/.github/workflows/snyk-infrastructure-analysis.yml
@@ -1,4 +1,5 @@
-# A sample workflow which checks out your Infrastructure as Code Configuration files,
+---
+# A sample workflow which checks out your Infrastructure as Code Configuration
 # such as Kubernetes, Helm & Terraform and scans them for any security issues.
 # The results are then uploaded to GitHub Security Code Scanning
 #
@@ -9,10 +10,10 @@ name: Snyk Infrastructure as Code
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ main ]
+    branches: [main]
   schedule:
     - cron: '29 11 * * 2'
 
@@ -27,8 +28,9 @@ jobs:
         continue-on-error: true
         uses: snyk/actions/iac@master
         env:
-          # In order to use the Snyk Action you will need to have a Snyk API token.
-          # More details in https://github.com/snyk/actions#getting-your-snyk-token
+          # In order to use the Snyk Action you will need to have a Snyk API
+          # token. More details in
+          # https://github.com/snyk/actions#getting-your-snyk-token
           # or you can signup for free at https://snyk.io/login
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
