download dependencies with ansible.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -48,7 +48,7 @@
     url: "{{ gcc_url }}"
     dest: "/tmp/compile_gcc/gcc-{{ GCCVER }}.tar.gz"
     mode: 0755
-    validate_certs: false
+    validate_certs: "{{ gcc_mirror_url_signed }}"
   register: download_gcc_src
   until: download_gcc_src is succeeded
   delay: 3
@@ -56,11 +56,42 @@
 
 - name: unarchive GCC source
   unarchive:
-    src: "{{ download_gcc_src.dest }}"
+    src: "/tmp/compile_gcc/gcc-{{ GCCVER }}.tar.gz"
     dest: "{{ prefix }}/src"
     mode: u=rwX,g=rX,o=rX
     creates: "{{ prefix }}/src/gcc-{{ GCCVER }}"
     copy: false
+
+- name: download GCC dependencies
+  get_url:
+    url: "{{ dependencies_url }}{{ item.file }}"
+    checksum: "md5:{{ item.md5 }}"
+    dest: "{{ prefix }}/src/gcc-{{ GCCVER }}/{{ item.file }}"
+    validate_certs: "{{ dependencies_url_signed }}"
+  loop: "{{ dependencies }}"
+  loop_control:
+    label: "{{ dependencies_url }}{{ item.file }}"
+
+- name: unarchive GCC dependencies
+  unarchive:
+    src: "{{ prefix }}/src/gcc-{{ GCCVER }}/{{ item.file }}"
+    dest: "{{ prefix }}/src/gcc-{{ GCCVER }}/"
+    mode: u=rwX,g=rX,o=rX
+    creates: "{{ prefix }}/src/gcc-{{ GCCVER }}/{{ item.dir }}"
+    copy: false
+  loop: "{{ dependencies }}"
+  loop_control:
+    label: "{{ prefix }}/src/gcc-{{ GCCVER }}/{{ item.dir }}"
+
+- name: symlink GCC dependencies
+  file:
+    src: "{{ prefix }}/src/gcc-{{ GCCVER }}/{{ item.dir }}"
+    path: "{{ prefix }}/src/gcc-{{ GCCVER }}/{{ item.name }}"
+    state: link
+    mode: 0777
+  loop: "{{ dependencies }}"
+  loop_control:
+    label: "{{ prefix }}/src/gcc-{{ GCCVER }}/{{ item.name }}"
 
 - name: source devtoolset enable file
   when: collections_enabled and ansible_os_family == 'RedHat'
@@ -93,16 +124,6 @@
   args:
     chdir: "{{ prefix }}/src/binutils-{{ binutilsver }}"
     creates: "{{ prefix }}/bin/strip"
-
-- name: download_prerequisites
-  command: contrib/download_prerequisites
-  register: download_prerequisites
-  until: download_prerequisites.rc|int == 0
-  delay: 2
-  retries: 10
-  args:
-    chdir: "{{ prefix }}/src/gcc-{{ GCCVER }}"
-    creates: "{{ prefix }}/src/gcc-{{ GCCVER }}/isl-0.14.tar.bz2"
 
 - name: create directory
   file:
