--- a/vars/RedHat-6.yml
+++ b/vars/RedHat-6.yml
@@ -4,6 +4,9 @@ DTSVER: 7
 cplusplus_devtoolset: "devtoolset-{{ DTSVER }}"
 binutilsver: 2.29.1
 rpms_for_compiling_gcc:
+  - dejagnu
+  - expect
+  - tcl
   - flex
   - svn
   - texinfo-tex
