--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -11,7 +11,9 @@ gcc_url: "{{ gcc_mirror_url }}/gcc-{{ GCCVER }}/gcc-{{ GCCVER }}.tar.gz"
 binutils_file: "binutils-{{ binutilsver }}.tar.bz2"
 binutils_url: "http://ftp.gnu.org/gnu/binutils/{{ binutils_file }}"
 prefix: /usr/local
-dejagnu_url: "https://ftp.nluug.nl/pub/gnu/dejagnu/dejagnu-1.6.3.tar.gz"
+gnu_mirror: 'https://ftp.nluug.nl/pub/gnu/'
+
+# for building
 dependencies_url: 'https://gcc.gnu.org/pub/gcc/infrastructure/'
 dependencies_url_signed: true
 dependencies:
@@ -31,3 +33,8 @@ dependencies:
     dir: 'mpfr-3.1.6'
     file: 'mpfr-3.1.6.tar.bz2'
     md5: 320c28198def956aeacdb240b46b8969
+
+# for testing
+test_gcc: false
+dejagnu_ver: 1.6.3
+dejagnu_url: "{{ gnu_mirror }}/dejagnu/dejagnu-{{ dejagnu_ver }}.tar.gz"
