--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -1,7 +1,8 @@
 ---
 - name: Converge
   hosts: all
-  strategy: free
+  vars:
+    test_gcc: true
   tasks:
     - name: "Include compile_gcc"
       include_role:
