Allow on-prem use (#2)
* updated GCC dependencies as separate downloads.
* download dependencies with ansible.
* extra packages for testing GCC
* unpack Binutils
* log-config
* install validation toolset
* tag test_gcc will run make check-c++

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -1,6 +1,7 @@
 ---
 dependency:
   name: galaxy
+  requirements_file: requirements.yml
 driver:
   name: docker
 lint: |
@@ -18,3 +19,5 @@ provisioner:
   name: ansible
 verifier:
   name: ansible
+  config_options:
+    stdout_callback: yaml
