--- a/vars/RedHat-7.yml
+++ b/vars/RedHat-7.yml
@@ -3,6 +3,10 @@ collections_enabled: true
 DTSVER: 10
 cplusplus_devtoolset: "devtoolset-{{ DTSVER }}"
 binutilsver: 2.29.1
+rpms_for_testing_gcc:
+  - expect
+  - tcl
+  - python3-test
 rpms_for_compiling_gcc:
   - flex
   - svn
