--- a/vars/RedHat-8.yml
+++ b/vars/RedHat-8.yml
@@ -1,6 +1,10 @@
 ---
 collections_enabled: false
 binutilsver: 2.36.1
+rpms_for_testing_gcc:
+  - expect
+  - tcl
+  - python3-test
 rpms_for_compiling_gcc:
   - flex
   - svn
