--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,10 +8,11 @@ gcc_configure: '--disable-multilib --enable-languages=c,c++'
 gcc_mirror_url: 'http://mirrors.concertpass.com/gcc/releases'
 gcc_mirror_url_signed: false
 gcc_url: "{{ gcc_mirror_url }}/gcc-{{ GCCVER }}/gcc-{{ GCCVER }}.tar.gz"
-binutils_file: "binutils-{{ binutilsver }}.tar.bz2"
-binutils_url: "http://ftp.gnu.org/gnu/binutils/{{ binutils_file }}"
-prefix: /usr/local
 gnu_mirror: 'https://ftp.nluug.nl/pub/gnu/'
+binutils_file: "binutils-{{ binutilsver }}.tar.bz2"
+binutils_url: "{{ gnu_mirror }}/binutils/{{ binutils_file }}"
+prefix: /usr/local
+
 
 # for building
 dependencies_url: 'https://gcc.gnu.org/pub/gcc/infrastructure/'
